--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
             <div class="page-footer__sign-up">
                 <p class="page-footer__title">Підпишіться на розсилку</p>
                 <form name="sign-up-form" class="sign-up-form">
-                    <label for="mail" class="sign-up-form__label"></label>
+                    <label for="mail" id="email" class="sign-up-form__label"></label>
                     <input type="email" name="email" placeholder="E-mail" id="email-input" class="sign-up-form__input" />
 
                 <button type="submit" class="button sign-up-form__button">Підписатися
